--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/World/L_Base.L_Base
+EditorStartupMap=/Game/World/L_Base.L_Base
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
